--- a/classic/userChrome.css
+++ b/classic/userChrome.css
@@ -194,7 +194,7 @@
 /************************************************************************************************/
 
 /* navigation toolbar buttons appearance - [only use one at a time] *****************************/
-@import "./css/buttons/buttons_on_navbar_classic_appearance.css"; /**/
+/* @import "./css/buttons/buttons_on_navbar_classic_appearance.css"; /**/
 /* @import "./css/buttons/buttons_on_navbar_classic_appearance_v2.css"; /**/
 /* @import "./css/buttons/buttons_on_navbar_windows_classic_theme_appearance.css"; /**/
 /* @import "./css/buttons/buttons_on_navbar_glass_appearance.css";			/* <--- good for Dark themes */
@@ -219,7 +219,7 @@
 /* @import "./css/buttons/buttons_on_navbar_more_compact_mode_custom_icons_fix.css"; /**/
 
 /* icon appearance - [only use one at a time] (custom icons do not scale in HiDPI modes) ********/
-@import "./css/buttons/icons_colorized.css"; /**/
+/* @import "./css/buttons/icons_colorized.css"; /**/
 /* @import "./css/buttons/icons_white_icons.css"; /**/
 /* @import "./css/buttons/icons_custom_icons.css"; /**/  /* aka "Mozilla Mix" from CTB */
 /* @import "./css/buttons/icons_custom_icons_fx1.css"; /**/
@@ -241,7 +241,7 @@
 
 /* bookmarks toolbar - buttons appearance - [only use one at a time] ****************************/
 /* old bookmarks toolbar button appearance ******************************************************/
-@import "./css/buttons/buttons_on_bookmarks_toolbar_old_size_and_appearance.css"; /**/  /* Windows only */
+/* @import "./css/buttons/buttons_on_bookmarks_toolbar_old_size_and_appearance.css"; /**/  /* Windows only */
 /* @import "./css/buttons/buttons_on_bookmarks_toolbar_classic_appearance.css"; /**/
 /* @import "./css/buttons/buttons_on_bookmarks_toolbar_classic_appearance_items.css"; /**/
 
@@ -303,8 +303,8 @@
 /* @import "./css/appbutton/appbutton_hidden.css"; /**/
 
 /* application/hamburger button popup ***********************************************************/
-@import "./css/appbutton/appbutton_popup_more_icons.css"; /**/
-@import "./css/appbutton/appbutton_popup_icons_colorized.css"; /**/
+/* @import "./css/appbutton/appbutton_popup_more_icons.css"; /**/
+/* @import "./css/appbutton/appbutton_popup_icons_colorized.css"; /**/
 /* @import "./css/appbutton/appbutton_popup_sync_hidden.css"; /**/
 /* @import "./css/appbutton/appbutton_popup_logins_and_passwords_hidden.css"; /**/
 /* @import "./css/appbutton/appbutton_popup_trackingprotection_hidden.css"; /**/
@@ -385,7 +385,7 @@
 /************************************************************************************************/
 
 /* custom tab appearance - [only use one at a time] *********************************************/
-@import "./css/tabs/classic_squared_tabs.css"; /**/
+/* @import "./css/tabs/classic_squared_tabs.css"; /**/
 /* @import "./css/tabs/classic_squared_tabs_australized.css"; /**/
 
 /* custom tab colors are set inside color_variables***.css file(s) ******************************/
@@ -407,7 +407,7 @@
 /* [!] Note: do not use OS titlebar with 'tabs not on top' code on macOS ************************/
 /* [!] Note: only ~fx65_v2 works with multi-tab lines option on Fx65+. **************************/
 /* - Fx 60-64 ***********************************************************************************/
-/* @import "./css/tabs/tabs_below_navigation_toolbar.css"; /**/ /* <-- Windows/Linux */
+@import "./css/tabs/tabs_below_navigation_toolbar.css"; /**/ /* <-- Windows/Linux */
 /* @import "./css/tabs/tabs_below_navigation_toolbar_macOS.css"; /**/ /* <-- macOS */
 /* - Fx 65-67 - Windows/Linux *******************************************************************/
 /* @import "./css/tabs/tabs_below_navigation_toolbar_fx65.css"; /**/
@@ -421,7 +421,7 @@
 /* - Fx 68-71 Windows/Linux (use the Fx 65+ versions for macOS) *********************************/
 /* @import "./css/tabs/tabs_below_navigation_toolbar_fx68.css"; /**/
 /* - Fx 72+ Windows/Linux (use the Fx 65+ versions for macOS) ***********************************/
-/* @import "./css/tabs/tabs_below_navigation_toolbar_fx72.css"; /**/
+@import "./css/tabs/tabs_below_navigation_toolbar_fx72.css"; /**/
 
 /* - TABS BELOW MAIN CONTENT (tabs on bottom) - EXPERIMENTAL ************************************/
 /* [!] SUPPORT THREAD: https://github.com/aris-t2/customcssforfx/issues/33 **********************/
@@ -483,7 +483,7 @@
 /* @import "./css/tabs/tab_scrollbuttons_both_on_toolbars_end.css"; /**/
 
 /* restore empty/missing tab favicon - [only use one at a time] *********************************/
-@import "./css/tabs/missing_tab_favicon_restored_default.css"; /**/
+/* @import "./css/tabs/missing_tab_favicon_restored_default.css"; /**/
 /* @import "./css/tabs/missing_tab_favicon_restored_globe_v2.css"; /**/
 /* @import "./css/tabs/missing_tab_favicon_restored_sheet.css"; /**/
 /* @import "./css/tabs/missing_tab_favicon_restored_dotted.css"; /**/
@@ -541,8 +541,8 @@
 /* GENERAL UI ***********************************************************************************/
 /************************************************************************************************/
 
-@import "./css/generalui/private_mode_indicator_hidden.css"; /**/
-@import "./css/generalui/bookmark_icons_colorized.css"; /**/
+/* @import "./css/generalui/private_mode_indicator_hidden.css"; /**/
+/* @import "./css/generalui/bookmark_icons_colorized.css"; /**/
 /* @import "./css/generalui/bookmarks_smaller_more_bookmarks_icon.css"; /**/
 /* @import "./css/generalui/send_to_device_menuitems_hidden.css"; /**/
 /* @import "./css/generalui/set_as_desktop_background_menuitems_hidden.css"; /**/
@@ -583,7 +583,7 @@
 /* page context menu items: 'back', 'forward', 'reload', 'stop', 'bookmarks' ********************/
 /* @import "./css/generalui/context_bfrsb_icons_colorized.css"; /**/
 /* menuitem labels - [only use one at a time] ***************************************************/
-@import "./css/generalui/context_bfrsb_labels_without_icons.css"; /**/
+/* @import "./css/generalui/context_bfrsb_labels_without_icons.css"; /**/
 /* @import "./css/generalui/context_bfrsb_labels_with_icons.css"; /**/
 /* @import "./css/generalui/context_bfrsb_labels_with_and_without_icons_Lin_macOS.css"; /**/		/* <-- Lin/macOS fix v1 */
 /* @import "./css/generalui/context_bfrsb_labels_with_and_without_icons_Lin_macOSv2.css"; /**/		/* <-- Lin/macOS fix v2 */
@@ -601,7 +601,7 @@
 /* @import "./css/generalui/close_icon_firefox3.css"; /**/
 
 /* SEARCHBAR ************************************************************************************/
-@import "./css/generalui/searchbar_glassplus_indicator_hidden.css"; /**/
+/* @import "./css/generalui/searchbar_glassplus_indicator_hidden.css"; /**/
 /* @import "./css/generalui/searchbar_go_button_hidden.css"; /**/
 
 /* searchbar popup ******************************************************************************/
@@ -673,7 +673,7 @@
 /* @import "./css/toolbars/menubar_color.css"; /**/
 
 /* BOOKMARKS TOOLBAR ****************************************************************************/
-@import "./css/toolbars/bookmarks_toolbar_old_height.css"; /**/
+/* @import "./css/toolbars/bookmarks_toolbar_old_height.css"; /**/
 /* @import "./css/toolbars/bookmarks_toolbar_autohide.css"; /**/
 /* @import "./css/toolbars/bookmarks_toolbar_bookmark_labels_hidden.css"; /**/
 /* @import "./css/toolbars/bookmarks_toolbar_in_fullscreen_mode.css"; /**/
@@ -695,7 +695,7 @@
 /* @import "./css/toolbars/bookmarks_toolbar_multiple_lines_fx66.css"; /**/ /* <--- EXPERIMENTAL */
 
 /* TOOLBAR COLORS *******************************************************************************/
-@import "./css/toolbars/general_toolbar_colors.css"; /**/
+/* @import "./css/toolbars/general_toolbar_colors.css"; /**/
 /* @import "./css/toolbars/tab_toolbar_colors_force_menubar_color.css"; /**/
 
 /* AeroGlass TOOLBARS - separated - set per toolbar / WIN10 fix for GLASS8 **********************/
@@ -717,8 +717,8 @@
 /************************************************************************************************/
 
 /* general location bar tweaks ******************************************************************/
-@import "./css/locationbar/locationbar_adjustments.css"; /**/
-@import "./css/locationbar/compact_mode_reduce_fontsize.css"; /**/
+/* @import "./css/locationbar/locationbar_adjustments.css"; /**/
+/* @import "./css/locationbar/compact_mode_reduce_fontsize.css"; /**/
 /* @import "./css/locationbar/background_color_dark.css"; /**/
 /* @import "./css/locationbar/locationbar_border_roundness.css"; /**/
 /* @import "./css/locationbar/locationbar_reduce_height.css"; /**/
@@ -729,34 +729,34 @@
 /* @import "./css/locationbar/identitybox_labels_hidden.css"; /**/
 
 /* padlock icons in identity box / page identity button - [only use one at a time] **************/
-@import "./css/locationbar/identitybox_padlock_icon_classic.css"; /**/
+/* @import "./css/locationbar/identitybox_padlock_icon_classic.css"; /**/
 /* @import "./css/locationbar/identitybox_padlock_icon_classic2.css"; /**/
 /* @import "./css/locationbar/identitybox_padlock_icon_modern.css"; /**/
 /* @import "./css/locationbar/identitybox_padlock_icon_modern2.css"; /**/
 /* @import "./css/locationbar/identitybox_padlock_icon_hidden.css"; /**/
 
 /* additional icons/buttons and tweaks for third party page action buttons **********************/
-@import "./css/locationbar/icons_colorized.css"; /**/
+/* @import "./css/locationbar/icons_colorized.css"; /**/
 /* @import "./css/locationbar/reader_alternative_icon.css"; /**/
 /* @import "./css/locationbar/popup_blocked_button_hidden.css"; /**/
 /* @import "./css/locationbar/zoom_button_hidden.css"; /**/
 /* @import "./css/locationbar/go_button_in_location_bar_hidden.css"; /**/
 
 /* page action button (three dots) / separator **************************************************/
-@import "./css/locationbar/pageaction_separator_in_location_bar_hidden.css"; /**/
+/* @import "./css/locationbar/pageaction_separator_in_location_bar_hidden.css"; /**/
 /* @import "./css/locationbar/pageaction_button_in_location_bar_hidden.css"; /**/
 /* @import "./css/locationbar/pageaction_button_rotated_and_last_pageaction_button.css"; /**/
 
 /* star button / bookmarks star *****************************************************************/
-@import "./css/locationbar/starbutton_is_last_pageaction_button.css"; /**/
-@import "./css/locationbar/starbutton_popup_preview_image_hidden.css"; /**/
+/* @import "./css/locationbar/starbutton_is_last_pageaction_button.css"; /**/
+/* @import "./css/locationbar/starbutton_popup_preview_image_hidden.css"; /**/
 /* alternative yellow star icon - [only use one at a time] **************************************/
 /* @import "./css/locationbar/starbutton_alternative_icon.css"; /**/
 /* @import "./css/locationbar/starbutton_alternative_icon_v2.css"; /**/
 
 /* autocomplete / history dropmarker ************************************************************/
-@import "./css/locationbar/dropmarker_at_the_end.css"; /**/
-@import "./css/locationbar/dropmarker_visible.css"; /**/
+/* @import "./css/locationbar/dropmarker_at_the_end.css"; /**/
+/* @import "./css/locationbar/dropmarker_visible.css"; /**/
 
 
 /************************************************************************************************/
