--- a/classic/config/custom_tab_text_settings.css
+++ b/classic/config/custom_tab_text_settings.css
@@ -9,7 +9,7 @@
 .tabbrowser-tab .tab-label {
   color: black !important;
 }
-/* text shadow */
+/* text shadow *//*
 .tabbrowser-tab .tab-label {
   text-shadow:	0px 1px 0px white,
 				0px 1px 4px white !important;
@@ -27,16 +27,16 @@
 /*******************************************/
 /* selected tab ****************************/
 
-/* text color */
+/* text color *//*
 .tabbrowser-tab[selected] .tab-label {
   color: blue !important;
 }
-/* text shadow */
+/* text shadow *//*
 .tabbrowser-tab[selected] .tab-label {
   text-shadow:	0px 1px 0px white,
 				0px 1px 4px white !important;
 }
-/*bold*/
+/*bold*//*
 .tabbrowser-tab[selected] .tab-label {
   font-weight: bold !important;
 }
@@ -74,12 +74,12 @@
 .tabbrowser-tab:hover:not([selected]) .tab-label {
   color: black !important;
 }
-/* text shadow */
+/* text shadow *//*
 .tabbrowser-tab:hover:not([selected]) .tab-label {
   text-shadow:	0px 1px 0px white,
 				0px 1px 4px white !important;
 }
-/*bold*/
+/*bold*//*
 .tabbrowser-tab:hover:not([selected]) .tab-label {
   font-weight: bold !important;
 }
@@ -92,16 +92,16 @@
 /*******************************************/
 /* unloaded/pending tab ********************/
 
-/* text color */
+/* text color *//*
 .tabbrowser-tab[pending] .tab-label {
   color: purple !important;
 }
-/* text shadow */
+/* text shadow *//*
 .tabbrowser-tab[pending] .tab-label {
   text-shadow:	0px 1px 0px white,
 				0px 1px 4px white !important;
 }
-/*bold*/
+/*bold*//*
 .tabbrowser-tab[pending] .tab-label {
   font-weight: bold !important;
 }
