--- a/classic/userChrome.css
+++ b/classic/userChrome.css
@@ -137,7 +137,7 @@
 /* @import "./css/buttons/button_padding_proton.css"; /**/
 
 /* navigation toolbar buttons appearance - [only use one at a time] *****************************/
-@import "./css/buttons/buttons_on_navbar_classic_appearance.css"; /**/
+/* @import "./css/buttons/buttons_on_navbar_classic_appearance.css"; /**/
 /* @import "./css/buttons/buttons_on_navbar_classic_appearance_v2.css"; /**/
 /* @import "./css/buttons/buttons_on_navbar_windows_classic_theme_appearance.css"; /**/
 /* @import "./css/buttons/buttons_on_navbar_glass_appearance.css";			/* <--- good for Dark themes */
@@ -161,7 +161,7 @@
 /* @import "./css/buttons/buttons_on_navbar_more_compact_mode.css"; /**/
 
 /* icon appearance - [only use one at a time] (custom icons do not scale in HiDPI modes) ********/
-@import "./css/buttons/icons_colorized.css"; /**/
+/* @import "./css/buttons/icons_colorized.css"; /**/
 /* @import "./css/buttons/icons_white_icons.css"; /**/
 /* @import "./css/buttons/icons_custom_icons.css"; /**/  /* aka "Mozilla Mix" from CTB */
 /* @import "./css/buttons/icons_custom_icons_fx1.css"; /**/
@@ -183,7 +183,7 @@
 
 /* bookmarks toolbar - buttons appearance - [only use one at a time] ****************************/
 /* old bookmarks toolbar button appearance ******************************************************/
-@import "./css/buttons/buttons_on_bookmarks_toolbar_old_size_and_appearance.css"; /**/  /* Windows only */
+/* @import "./css/buttons/buttons_on_bookmarks_toolbar_old_size_and_appearance.css"; /**/  /* Windows only */
 /* @import "./css/buttons/buttons_on_bookmarks_toolbar_classic_appearance.css"; /**/
 /* @import "./css/buttons/buttons_on_bookmarks_toolbar_classic_appearance_items.css"; /**/
 
@@ -249,8 +249,8 @@
 /* @import "./css/appbutton/appbutton_hidden.css"; /**/
 
 /* application/hamburger button popup ***********************************************************/
-@import "./css/appbutton/appbutton_popup_more_icons.css"; /**/
-@import "./css/appbutton/appbutton_popup_icons_colorized.css"; /**/
+/* @import "./css/appbutton/appbutton_popup_more_icons.css"; /**/
+/* @import "./css/appbutton/appbutton_popup_icons_colorized.css"; /**/
 /* @import "./css/appbutton/appbutton_popup_sync_hidden.css"; /**/
 /* @import "./css/appbutton/appbutton_popup_logins_and_passwords_hidden.css"; /**/
 /* @import "./css/appbutton/appbutton_popup_trackingprotection_hidden.css"; /**/
@@ -323,7 +323,7 @@
 /************************************************************************************************/
 
 /* custom tab appearance - [only use one at a time] *********************************************/
-@import "./css/tabs/classic_squared_tabs.css"; /**/
+/* @import "./css/tabs/classic_squared_tabs.css"; /**/
 /* @import "./css/tabs/classic_squared_tabs_australized.css"; /**/
 /* @import "./css/tabs/default_tabs_enhanced.css"; /**/ /* Fx89+ & Proton UI */
 
@@ -369,8 +369,8 @@
 /* @import "./css/tabs/tabs_below_navigation_toolbar_fx74_macOS_default_tabs.css"; /**/
 /* - Fx 89+ Windows/Linux ***********************************************************************/
 /* [!] might require overriding url bars 'selection color' --> see corresponding area ***********/ 
-/* @import "./css/tabs/tabs_below_navigation_toolbar_fx89.css"; /**/
-/* @import "./css/tabs/tabs_below_navigation_toolbar_fx89_WinLin_defaults_tabs.css"; /**/
+@import "./css/tabs/tabs_below_navigation_toolbar_fx89.css"; /**/
+@import "./css/tabs/tabs_below_navigation_toolbar_fx89_WinLin_defaults_tabs.css"; /**/
 /* - Fx 89+ - macOS *****************************************************************************/
 /* @import "./css/tabs/tabs_below_navigation_toolbar_fx89_macOS.css"; /**/
 /* @import "./css/tabs/tabs_below_navigation_toolbar_fx89_macOS_default_tabs.css"; /**/
@@ -403,10 +403,10 @@
 
 /* TAB BACKGROUND COLORS for default/active/hovered/unloaded tabs and 'new tab' tab *************/
 /* edit target file to set own custom colors ****************************************************/
-/* @import "./config/custom_tab_color_settings.css"; /**/
+@import "./config/custom_tab_color_settings.css"; /**/
 /* TAB TEXT colors/shadow/weight/style for default/active/hovered/unloaded tabs *****************/
 /* edit target file to set own custom colors ****************************************************/
-/* @import "./config/custom_tab_text_settings.css"; /**/
+@import "./config/custom_tab_text_settings.css"; /**/
 
 /* MULTIROW / multi lined tabs - [only use one at a time] ***************************************/
 /* [!] EXPERIMENTAL (any Fx update might break this highly experimental feature) ****************/
@@ -440,7 +440,7 @@
 /* @import "./css/tabs/tab_scrollbuttons_both_on_toolbars_end_fx72.css"; /**/  /* Fx 72+ */
 
 /* restore empty/missing tab favicon - [only use one at a time] *********************************/
-@import "./css/tabs/missing_tab_favicon_restored_default.css"; /**/
+/* @import "./css/tabs/missing_tab_favicon_restored_default.css"; /**/
 /* @import "./css/tabs/missing_tab_favicon_restored_globe_v2.css"; /**/
 /* @import "./css/tabs/missing_tab_favicon_restored_sheet.css"; /**/
 /* @import "./css/tabs/missing_tab_favicon_restored_dotted.css"; /**/
@@ -498,8 +498,8 @@
 /* GENERAL UI ***********************************************************************************/
 /************************************************************************************************/
 
-@import "./css/generalui/private_mode_indicator_hidden.css"; /**/
-@import "./css/generalui/bookmark_icons_colorized.css"; /**/
+/* @import "./css/generalui/private_mode_indicator_hidden.css"; /**/
+/* @import "./css/generalui/bookmark_icons_colorized.css"; /**/
 /* @import "./css/generalui/bookmarks_smaller_more_bookmarks_icon.css"; /**/
 /* @import "./css/generalui/send_to_device_menuitems_hidden.css"; /**/
 /* @import "./css/generalui/set_as_desktop_background_menuitems_hidden.css"; /**/
@@ -552,7 +552,7 @@
 /* page context menu items: 'back', 'forward', 'reload', 'stop', 'bookmarks' ********************/
 /* @import "./css/generalui/context_bfrsb_icons_colorized.css"; /**/
 /* menuitem labels - [only use one at a time] ***************************************************/
-@import "./css/generalui/context_bfrsb_labels_without_icons.css"; /**/
+/* @import "./css/generalui/context_bfrsb_labels_without_icons.css"; /**/
 /* @import "./css/generalui/context_bfrsb_labels_with_icons.css"; /**/
 /* @import "./css/generalui/context_bfrsb_labels_with_and_without_icons_Lin_macOS.css"; /**/		/* <-- Linux/macOS fix v1 */
 /* @import "./css/generalui/context_bfrsb_labels_with_and_without_icons_Lin_macOSv2.css"; /**/		/* <-- Linux/macOS fix v2 */
@@ -573,7 +573,7 @@
 /* @import "./css/generalui/close_icon_firefox3.css"; /**/
 
 /* SEARCHBAR ************************************************************************************/
-@import "./css/generalui/searchbar_glassplus_indicator_hidden.css"; /**/
+/* @import "./css/generalui/searchbar_glassplus_indicator_hidden.css"; /**/
 /* @import "./css/generalui/searchbar_go_button_hidden.css"; /**/
 
 /* searchbar popup ******************************************************************************/
@@ -668,10 +668,10 @@
 /* [!] SUPPORT THREAD: https://github.com/aris-t2/customcssforfx/issues/99 **********************/
 /* @import "./css/toolbars/bookmarks_toolbar_multiple_lines.css"; /**/ /* <--- EXPERIMENTAL */
 /* @import "./css/toolbars/bookmarks_toolbar_multiple_lines_fx66.css"; /**/ /* <--- EXPERIMENTAL */ /*Fx66-73*/
-/* @import "./css/toolbars/bookmarks_toolbar_multiple_lines_fx74.css"; /**/ /* <--- EXPERIMENTAL */ /*Fx74+*/
+@import "./css/toolbars/bookmarks_toolbar_multiple_lines_fx74.css"; /**/ /* <--- EXPERIMENTAL */ /*Fx74+*/
 
 /* TOOLBAR COLORS *******************************************************************************/
-@import "./css/toolbars/general_toolbar_colors.css"; /**/
+/* @import "./css/toolbars/general_toolbar_colors.css"; /**/
 /* @import "./css/toolbars/tab_toolbar_colors_force_menubar_color.css"; /**/
 
 /* AeroGlass TOOLBARS - separated - set per toolbar / WIN10 fix for GLASS8 **********************/
@@ -709,14 +709,14 @@
 /* @import "./css/locationbar/identitybox_padlock_icon_hidden.css"; /**/
 
 /* additional icons/buttons and tweaks for third party page action buttons **********************/
-@import "./css/locationbar/icons_colorized.css"; /**/
+/* @import "./css/locationbar/icons_colorized.css"; /**/
 /* @import "./css/locationbar/reader_alternative_icon.css"; /**/
 /* @import "./css/locationbar/popup_blocked_button_hidden.css"; /**/
 /* @import "./css/locationbar/zoom_button_hidden.css"; /**/
 /* @import "./css/locationbar/go_button_in_location_bar_hidden.css"; /**/
 
 /* page action button (three dots) / separator **************************************************/
-@import "./css/locationbar/pageaction_separator_in_location_bar_hidden.css"; /**/
+/* @import "./css/locationbar/pageaction_separator_in_location_bar_hidden.css"; /**/
 /* @import "./css/locationbar/pageaction_button_in_location_bar_hidden.css"; /**/
 /* @import "./css/locationbar/pageaction_button_rotated_and_last_pageaction_button.css"; /**/
 
